target/release/build/anyhow-6fcf4e52b525c16b/stderr
error[E0554]: `#![feature]` may not be used on the stable release channel
 --> /home/joseph/Desktop/wasm-game-of-life/target/release/build/anyhow-6fcf4e52b525c16b/out/probe.rs:2:5
  |
2 |     #![feature(backtrace)]
  |     ^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0554`.
